<resources>
    <string name="app_name">Tip Time</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="label">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>

    <string name="cost_of_service">Cost of Service</string>

    <string name="tip_amount">Tip Amount</string>
</resources>